// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.StyledText.native renders a snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#fafafa",
      },
      undefined,
    ]
  }
>
  Text
</Text>
`;

exports[`Button.StyledText.native renders a snapshot with \`color:white\` 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="white"
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#191919",
      },
      undefined,
    ]
  }
>
  Text
</Text>
`;

exports[`Button.StyledText.native renders a snapshot with \`title:Text\` 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="#191919"
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#fafafa",
      },
      undefined,
    ]
  }
  title="Text"
/>
`;

exports[`Button.StyledView.native renders a snapshot 1`] = `
<View
  color="#191919"
  margin={0}
  style={
    Array [
      Object {
        "backgroundColor": "#191919",
        "borderRadius": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 10,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 10,
      },
      undefined,
    ]
  }
/>
`;

exports[`Button.StyledView.native renders a snapshot with \`color:white\` 1`] = `
<View
  color="white"
  margin={0}
  style={
    Array [
      Object {
        "backgroundColor": "#fafafa",
        "borderRadius": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 10,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 10,
      },
      undefined,
    ]
  }
/>
`;

exports[`Button.native renders a snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      margin={0}
    >
      Apple
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`color:white\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    color="white"
    margin={0}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      color="white"
      margin={0}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`disabled\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    style={
      Object {
        "opacity": 0.4,
      }
    }
  >
    <Styled(Text)
      margin={0}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`onPress\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      margin={0}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`primary\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    primary={true}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      margin={0}
      primary={true}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`style\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      margin={0}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`title:Press\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    margin={0}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Styled(Text)
      margin={0}
    >
      Press
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;
